--- a/style.css
+++ b/style.css
@@ -25,9 +25,8 @@ body {
   width: 80%;
 }
 
-.container__title {
-  height: 100%;
+.container__title,
+.container__title--2 {
   font-size: 10rem;
   color: #aaa;
-  margin-bottom: 5rem;
 }
